--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "brianium/paratest": "^6.7",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "irazasyed/laravel-identicon": "*",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "laravolt/avatar": "^5.0",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "^9.0"
     },
