--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravolt/avatar": "^5.0",
+        "spatie/laravel-backup": "^7.8",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "^9.0"
     },
